src/objects/Lost_to_Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Lost to Follow-Ups</relationshipLabel>
        <relationshipName>Lost_to_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_contact__c</fullName>
        <label>Date of last contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_contact_before_2_yrs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select Yes or No</inlineHelpText>
        <label>Last contact before 2 yrs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Lost_to_Follow_Up__c</referenceTo>
        <relationshipLabel>Lost to Follow-Ups</relationshipLabel>
        <relationshipName>Lost_to_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_certified_registered_ltr_DATE__c</fullName>
        <label>Send certified/registered ltr DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_certified_registered_ltr_Responce__c</fullName>
        <label>Send certified/registered ltr Response</label>
        <picklist>
            <picklistValues>
                <fullName>Letter returned unclaimed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response after 1 month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_certified_registered_ltr_to_known__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send certified/registered ltr to known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Sec_Death_Index_Research_Date__c</fullName>
        <label>Social Sec Death Index Research Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Social_Sec_Death_Index_Research__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Sec Death Index Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lost_to_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Lost to Follow-Ups</relationshipLabel>
        <relationshipName>Lost_to_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_LosttoFollowUp_Id__c</fullName>
        <label>pg_LosttoFollowUp_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Lost to Follow-Up</label>
    <nameField>
        <label>Lost to Follow-Up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lost to Follow-Ups</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>